# slop-mop

./: .aider.conf.yml  .envrc  .flake8  .gitignore  .pre-commit-hooks.yaml  .sb_config.json.template  .secrets.baseline  .willville.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  GATE_ARCHITECTURE_DESIGN.md  LICENSE  MANIFEST.in  MIGRATION_AND_REFACTOR_PLANNING.md  NEW_GATE_PROTOCOL.md  NEXT_PHASE.md  NOTICE  README.md  SECURITY.md  STATUS.md  SUBMISSION_GUIDE.md  package-lock.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  slopbucket.json  sm
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.cursor-plugin/skills/: sm-barnacle.md  sm-buff.md  sm-init.md  sm-refit.md  sm-sail.md  sm-scour.md  sm-swab.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-dogfood.yml  prepare-release.yml  release.yml  slopbucket.yml  slopmop-sarif.yml  slopmop.yml
.roo/rules/: 01-slopmop.md
.windsurf/rules/: slopmop.md
DOCS/: CI.md  COMPATIBILITY.md  CONTRIBUTING.md  CONVENTIONS.md  DEVELOPING.md  DISTRIBUTION_EFFORTS.md  GATE_REASONING.md  MACHINE_INTERFACE.md  MIGRATIONS.md  NEW_GATE_PROTOCOL.md  PENETRATION_EFFORTS.md  RELEASE_PREP_HANDOFF.md  RELEASING.md  VISIBILITY.md  WORKFLOW.md
commands/: sm-init.md  sm-sail.md  sm-scour.md  sm-swab.md  sm-wake-angry-drunk-captain.md
docs/: CI.md  COMPATIBILITY.md  GATE_REASONING.md  REFIT_INTEGRATION_PLAN.md  RELEASE_PREP_HANDOFF.md  RELEASING.md  WORKFLOW.md  recess_fastback_round2_codex_prompt.md  reddit_force_multiplier.md  reddit_force_multiplier.txt
scripts/: _freshness.py  check_migration_coverage.py  ci_scan_triage.py  claude-skill-demo.tape  gen_relationship_diagram.py  gen_timeline_diagram.py  gen_workflow_diagrams.py  generate_gate_reasoning.py  generate_readme_tables.py  generate_requirements_txt.py  release.sh  semantic_diff.py  setup-demo-project.sh  setup.sh  sm  summarize_coverage_xml.py  summarize_scour_failure.py  sync_version.py
skills/slopmop/: SKILL.md
slopbucket/: __init__.py  __main__.py  base_check.py  check_discovery.py  cli.py  config.py  result.py  runner.py  sb.py  subprocess_guard.py
slopbucket/checks/: __init__.py  base.py  e2e_check.py  frontend_check.py  integration_check.py  js_coverage.py  js_format.py  js_tests.py  python_complexity.py  python_coverage.py  python_duplication.py  python_format.py  python_lint.py  python_security.py  python_tests.py  python_type_check.py  smoke_check.py  template_validation.py
slopbucket/core/: config.py  executor.py  registry.py  result.py
slopbucket/reporting/: console.py
slopbucket/subprocess/: runner.py  validator.py
slopbucket/utils/: generate_base_config.py
slopmop/: __init__.py  __main__.py  _version.py  baseline.py  constants.py  exceptions.py  sm.py
slopmop/agent_install/: __init__.py  installer.py  loader.py  registry.py
slopmop/checks/: __init__.py  base.py  constants.py  custom.py  metadata.py  mixins.py
slopmop/cli/: __init__.py  _buff_status.py  _refit_formatting.py  _refit_iterate_cmd.py  _refit_iteration.py  _refit_precheck.py  _refit_skip.py  agent.py  audit.py  barnacle.py  buff.py  buff_common.py  buff_narration.py  buff_rounds.py  buff_scan.py  buff_status.py  capabilities.py  captain.py  ci.py  config.py  detection.py  doctor.py  gang.py  help.py  hooks.py  init.py  mcp.py  mutinize.py  parser_builders.py  precommit_hook.py  refit.py  sail.py  scan_triage.py  schema.py  status.py  upgrade.py  validate.py
slopmop/core/: cache.py  config.py  executor.py  lock.py  registry.py  result.py
slopmop/data/: command_mapping.py  git_wrapper.sh
slopmop/doctor/: __init__.py  base.py  gate_preflight.py  project_env.py  runtime.py  sm_env.py  state.py
slopmop/mcp/: __init__.py  server.py
slopmop/migrations/: __init__.py
slopmop/reporting/: __init__.py  adapters.py  console.py  dynamic.py  envelope.py  grading.py  rail.py  report.py  sarif.py  timings.py
slopmop/schemas/: __init__.py
slopmop/subprocess/: runner.py  validator.py
slopmop/utils/: __init__.py  environment.py  gate_reasoning_docs.py  generate_base_config.py  jsonc.py  readme_tables.py
slopmop/workflow/: __init__.py  hooks.py  state_machine.py  state_store.py
tests/: __init__.py  conftest.py  test_check_discovery.py  test_cli.py  test_config.py  test_result.py  test_runner.py  test_subprocess_guard.py  upgrade_scenario_helpers.py
tests/integration/: Dockerfile  README.md  conftest.py  docker_manager.py  refit_scenario_driver.py  scenario_manifest.py  test_docker_install.py  test_docker_manager.py  test_refit_scenario_driver.py  test_refit_scenario_integration.py  test_sarif_integration.py  test_scenario_manifest.py  test_secrets_remediation_integration.py  test_testmon_integration.py
tests/test_checks/: __init__.py  test_e2e_check.py  test_frontend_check.py  test_integration_check.py  test_js_checks.py  test_python_complexity.py  test_python_coverage.py  test_python_duplication.py  test_python_format.py  test_python_lint.py  test_python_new_code_coverage.py  test_python_security.py  test_python_tests.py  test_python_type_check.py  test_smoke_check.py  test_template_validation.py
tests/unit/: conftest.py  test_agent_install.py  test_audit.py  test_barnacle.py  test_base_check.py  test_baseline.py  test_bogus_tests_check.py  test_buff_inspect_and_status.py  test_buff_inspect_edges.py  test_buff_scan_fallback.py  test_buff_status.py  test_buff_workflow_actions.py  test_cache.py  test_capabilities.py  test_captain.py  test_check_migration_coverage.py  test_ci_triage_and_buff.py  test_cli.py  test_colors.py  test_config_debt_check.py  test_console_reporter.py  test_custom_gate_indicator.py  test_custom_gates.py  test_custom_gates_integration.py  test_dart_checks.py  test_dead_code_check.py  test_debugger_artifacts.py  test_deep_hooks.py  test_detect_secrets_check.py  test_detection.py  test_display_timings.py  test_doctor.py  test_doctor_checks.py  (+86 more)
(+153 files in other folders)
