[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopmop"
version = "0.2.1"
description = "Quality gates for AI-assisted codebases — catch the slop LLMs leave behind."
readme = "README.md"
license = {text = "Slop-Mop Attribution License v1.0"}
requires-python = ">=3.10"
authors = [
    {name = "ScienceIsNeato"}
]
keywords = ["quality-gate", "linting", "testing", "ci-cd", "code-quality", "ai", "llm", "vibe-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# All dependencies - both runtime tools and development/testing
dependencies = [
    # Tools slop-mop checks rely on
    "vulture>=2.14",
    "ruff>=0.1.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "diff-cover>=7.0.0",
    # Code quality
    "black>=25.11.0",
    "isort>=5.12.0",
    "autoflake>=2.0.0",
    "mypy>=1.17.0",
    "pyright>=1.1.0",
    "flake8>=6.0.0",
    # Security
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
    "semgrep>=1.140.0",
    "pip-audit>=2.0.0",
    "cryptography>=46.0.5",  # CVE GHSA-r6ph-v2qm-q3c2
    # Templating
    "jinja2>=3.0.0",
]

[project.scripts]
sm = "slopmop.sm:main"

[project.urls]
Homepage = "https://github.com/ScienceIsNeato/slop-mop"
Repository = "https://github.com/ScienceIsNeato/slop-mop"
Issues = "https://github.com/ScienceIsNeato/slop-mop/issues"
Changelog = "https://github.com/ScienceIsNeato/slop-mop/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["slopmop*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
exclude = ["venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require Docker + bucket-o-slop repo)",
]

[tool.coverage.run]
source = ["slopmop"]
omit = ["tests/*"]

[tool.coverage.report]
# fail_under handled by slopmop coverage check
show_missing = true

[tool.pyright]
exclude = ["tests/**", "venv/**", "build/**", "dist/**"]
