[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopmop"
version = "1.0.0"
description = "Quality gates for AI-assisted codebases — catch the slop LLMs leave behind."
readme = "README.md"
license = {text = "Slop-Mop Attribution License v1.0"}
requires-python = ">=3.10"
authors = [
    {name = "ScienceIsNeato"}
]
keywords = ["quality-gate", "linting", "testing", "ci-cd", "code-quality", "ai", "llm", "vibe-coding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Core runtime — only what the sm framework actually imports at the Python level.
# All check tools (black, bandit, etc.) are invoked via subprocess and are optional.
# Install extras for the tools you need: pipx install slopmop[all]
# jinja2 is intentionally NOT listed here — it's used only inside the
# jinja2_templates gate via a lazy import with a graceful fallback when absent.
dependencies = [
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Template validation (jinja2_templates gate)
templates = [
    "jinja2>=3.0.0",
]
# Formatting & linting
lint = [
    "black>=26.3.1",
    "isort>=5.12.0",
    "autoflake>=2.0.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
]
# Type checking
typing = [
    "mypy>=1.17.0",
    "pyright>=1.1.0",
]
# Static analysis (dead code, complexity)
analysis = [
    "vulture>=2.14",
    "radon>=5.1.0",
]
# Security scanning
security = [
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
    "cryptography>=46.0.7",  # CVE GHSA-r6ph-v2qm-q3c2, GHSA-m959-cc7f-wv43, GHSA-p423-j2cm-9vmq
    "pyasn1>=0.6.3",  # GHSA-jr27-m4p2-rc6r
    "requests>=2.33.0",  # GHSA-gc5v-m9x4-r6x2
    "semgrep>=1.140.0",
    "pip-audit>=2.0.0",
]
# Testing frameworks (for sm's own tests & PROJECT-context checks)
testing = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "pytest-testmon>=2.0.0",
    "diff-cover>=7.0.0",
    "jsonschema>=4.0.0",   # validates SARIF output against the vendored schema
]
# All tools — batteries-included experience
tools = [
    "slopmop[lint]",
    "slopmop[typing]",
    "slopmop[analysis]",
    "slopmop[security]",
    "slopmop[testing]",
    "slopmop[templates]",
]
all = [
    "slopmop[tools]",
]
# Developer setup (hacking on slopmop itself)
dev = [
    "slopmop[all]",
]

[project.scripts]
sm = "slopmop.sm:main"

[project.urls]
Homepage = "https://github.com/ScienceIsNeato/slop-mop"
Repository = "https://github.com/ScienceIsNeato/slop-mop"
Issues = "https://github.com/ScienceIsNeato/slop-mop/issues"
Changelog = "https://github.com/ScienceIsNeato/slop-mop/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["slopmop*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"slopmop.agent_install" = [
    "templates/_shared/*",
    "templates/aider/*",
    "templates/antigravity/.agents/rules/*",
    "templates/claude/.claude/commands/*",
    "templates/claude/.claude/skills/slopmop/*",
    "templates/claude/CLAUDE.md",
    "templates/cline/.clinerules/*",
    "templates/copilot/.copilot/skills/slopmop/*",
    "templates/copilot/.github/*",
    "templates/cursor/.cursor/rules/*",
    "templates/roo/.roo/rules/*",
    "templates/windsurf/.windsurf/rules/*",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
exclude = ["venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require Docker + bucket-o-slop repo)",
]

[tool.coverage.run]
source = ["slopmop"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
# fail_under handled by slopmop coverage check
show_missing = true

[tool.pyright]
exclude = ["tests/**", "venv/**", "build/**", "dist/**"]

# Slop-mop gate config (committed, shared across CI and local).
# Local .sb_config.json overrides these values where both exist.
[tool.slopmop.myopia.gates."dependency-risk.py"]
pip_audit_ignore_vulns = [
    "GHSA-5239-wwwm-4pmq",  # pygments ReDoS (CVE-2026-4539), low severity, no fix available
]

[tool.slopmop.myopia.gates."vulnerability-blindness.py"]
pip_audit_ignore_vulns = [
    "GHSA-5239-wwwm-4pmq",  # pygments ReDoS (CVE-2026-4539), low severity, no fix available
]
